Fixed alignment on footer links

--- a/app/assets/stylesheets/woople-theme/base.css.less
+++ b/app/assets/stylesheets/woople-theme/base.css.less
@@ -32,25 +32,18 @@ a:hover {
     width:140px;
   }
 }
+.footer {
+  float: right;
+  margin-top: 15px;
+  margin-right: 30px;
+  margin-left: 30px;
+}
 
-.footer_link {
-  float:right;
-  clear: left;
+.footer_link, .copyright {
+  float:left;
+  clear: right;
   text-align:right;
   margin-right:5px;
-  margin-top:15px;
-  color:rgba(0,0,0,0.5);
-}
-.footer_link:after {
-  content: ' •';
-}
-
-.copyright {
-  float:right;
-  clear: left;
-  text-align:right;
-  margin-right:30px;
-  margin-top:15px;
   color:rgba(0,0,0,0.5);
 }
 
